# isolator

./: .gitignore  DEVELOPMENT-README.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
examples/profiles/: browser.yaml
isolator/: __init__.py  __main__.py  config.py  enums.py  isolator.py  logging_config.py
isolator/config/: __init__.py  base.py  profiles.py
isolator/managers/: __init__.py  display_manager.py  enhanced_security_manager.py  filesystem_manager.py  requirements_manager.py  resource_manager.py  security_manager.py
