[metadata]
name = isolator
version = 0.1.0
description = A secure application isolation tool using bubblewrap
long_description = file: README.md
long_description_content_type = text/markdown
author = Gemechis Chala Degefa
author_email = gemechischala@gmail.com
url = https://github.com/scorpidev/isolator
project_urls =
    Bug Tracker = https://github.com/scorpidev/isolator/issues
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Security
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    isolator = isolator.__main__:main

[flake8]
max-line-length = 100
extend-ignore = E203
exclude = .git,__pycache__,build,dist

[isort]
profile = black
multi_line_output = 3

[mypy]
ignore_missing_imports = True
check_untyped_defs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True
strict_optional = True